# libHaptiComm

./: .gitignore  CMakeLists.txt  README.md  braille.sh  configure.sh  configure.sh~  configure_cmusphinx.sh  minimum.sh
0_executables/: CMakeLists.txt  Makefile  cmake_install.cmake
0_executables/apparent_motion_experiment/: Makefile  cmake_install.cmake
0_executables/caracterise2018/: Makefile  cmake_install.cmake
0_executables/caracterise2018/results/: up2048f100amp400_theoric.csv  up2048f100amp600_theoric.csv  up2048f10amp100_theoric.csv  up2048f10amp150_theoric.csv  up2048f10amp250_theoric.csv  up2048f10amp50_theoric.csv  up2048f10amp800_theoric.csv  up2048f1amp1000_theoric.csv  up2048f1amp400_theoric.csv  up2048f1amp600_theoric.csv  up2048f200amp150_theoric.csv  up2048f200amp200_theoric.csv  up2048f200amp400_theoric.csv  up2048f200amp800_theoric.csv  up2048f20amp300_theoric.csv  up2048f2amp200_theoric.csv  up2048f2amp300_theoric.csv  up2048f2amp600_theoric.csv  up2048f300amp1000_theoric.csv  up2048f300amp250_theoric.csv  up2048f300amp800_theoric.csv  up2048f500amp400_theoric.csv  up2048f500amp50_theoric.csv  up2048f50amp100_theoric.csv  up2048f50amp300_theoric.csv  up2048f50amp400_theoric.csv  up2048f50amp600_theoric.csv  up2048f5amp200_theoric.csv  up2048f5amp300_theoric.csv  up2048f5amp50_theoric.csv  up2048f5amp600_theoric.csv  up2048f700amp300_theoric.csv  up2048f700amp50_theoric.csv  up2048f700amp600_theoric.csv
0_executables/daemonEMOMNeutral/: CMakeLists.txt  main.cpp
0_executables/daemonPowerSupply/: CMakeLists.txt  main.cpp
0_executables/demo_standard/: CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  demo.cpp.bak
0_executables/demo_standard/results/: up1000f100amp200_theoric.csv  up1000f100amp250_theoric.csv  up1000f1amp400_theoric.csv  up1000f200amp50_theoric.csv  up1000f20amp150_theoric.csv  up1000f2amp50_theoric.csv  up1000f300amp600_theoric.csv  up1000f500amp150_theoric.csv  up1000f500amp300_theoric.csv  up1000f50amp800_theoric.csv  up1000f5amp150_theoric.csv  up1000f5amp200_theoric.csv  up1000f700amp600_theoric.csv  up1500f10amp250_theoric.csv  up1500f10amp50_theoric.csv  up1500f1amp400_theoric.csv  up1500f200amp150_theoric.csv  up1500f200amp250_theoric.csv  up1500f200amp400_theoric.csv  up1500f20amp250_theoric.csv  up1500f300amp100_theoric.csv  up2048f10amp250_theoric.csv  up2048f1amp200_theoric.csv  up2048f20amp150_theoric.csv  up2048f2amp250_theoric.csv  up2048f500amp400_theoric.csv  up2048f500amp600_theoric.csv  up2048f50amp150_theoric.csv  up2048f700amp1000_theoric.csv
0_executables/determine-up/: Makefile  cmake_install.cmake  determine-up.cpp
0_executables/determine-up/results/: up1000f100amp400_theoric.csv  up1000f100amp600_theoric.csv  up1000f10amp1000_theoric.csv  up1000f1amp600_theoric.csv  up1000f20amp50_theoric.csv  up1000f2amp800_theoric.csv  up1000f700amp100_theoric.csv  up1000f700amp300_theoric.csv  up1000f700amp400_theoric.csv  up1000f700amp50_theoric.csv  up1500f100amp100_theoric.csv  up1500f100amp150_theoric.csv  up1500f1amp1000_theoric.csv  up1500f200amp100_theoric.csv  up1500f300amp300_theoric.csv  up1500f500amp300_theoric.csv  up1500f50amp150_theoric.csv  up1500f700amp1000_theoric.csv  up2048f100amp100_theoric.csv  up2048f10amp50_theoric.csv  up2048f1amp400_theoric.csv  up2048f1amp50_theoric.csv  up2048f200amp50_theoric.csv  up2048f20amp50_theoric.csv  up2048f50amp200_theoric.csv  up2048f50amp250_theoric.csv  up2048f50amp50_theoric.csv  up2048f5amp100_theoric.csv  up2048f5amp150_theoric.csv  up2048f5amp400_theoric.csv  up2048f5amp600_theoric.csv  up2048f700amp100_theoric.csv  up2048f700amp800_theoric.csv
0_executables/example/: main.cpp
0_executables/experiment/apparentMotion201811/: CMakeLists.txt  appmotion_experiment.cpp
0_executables/experiment/apparent_motion_experiment_old/: CMakeLists.txt  appmotion_experiment.cpp
0_executables/experiment/maximum_tap_motion_experiment/: CMakeLists.txt  maximum_tapmotion_experiment.cpp
0_executables/experiment/sinefunction_generator/: CMakeLists.txt  Makefile  cmake_install.cmake  sinefunction_generator.cpp
0_executables/experiment/subitation/: CMakeLists.txt  Candidat.cpp  Candidat.h  Candidat.h.save  Experiment.cpp  Experiment.cpp.bak  Experiment.cpp.bak.2  Experiment.h  subitation.cpp
0_executables/experiment/tap_motion_experiment/: CMakeLists.txt  cmake_install.cmake  tapmotion_experiment.cpp
0_executables/experiment/taphold_motion_experiment/: CMakeLists.txt  Makefile  tapholdmotion_experiment.cpp
0_executables/haptiBraille/: CMakeLists.txt  demo.cpp  haptiBraille.cpp  haptiBraille.cpp.bak.2  haptiBraille.cpp.bak.3  main.cpp
0_executables/haptiComm/: CMakeLists.txt  haptiCommDemo.cpp
0_executables/maximum_tap_motion_experiment/: Makefile  cmake_install.cmake
0_executables/neutral/: CMakeLists.txt  Makefile  cmake_install.cmake  neutral.cpp
0_executables/readMp3/: CMakeLists.txt
0_executables/sinefunction_generator/: Makefile  cmake_install.cmake
0_executables/tap_motion_experiment/: Makefile  cmake_install.cmake
0_executables/taphold_motion_experiment/: Makefile  cmake_install.cmake
0_executables/taphold_motion_experiment/src/: toolstaphold.cpp
0_executables/test/: CMakeLists.txt
0_executables/test/read_channel/: CMakeLists.txt  read_channel.cpp
0_executables/tests/HaptiCommConfig/: CMakeLists.txt  Makefile  cmake_install.cmake  config - backup.cfg  config.cfg  haptiCommConfig.cpp
0_executables/tests/audioFile_readwrite/: CMakeLists.txt  main.cpp
0_executables/tests/blinkgpio/: CMakeLists.txt  main.cpp
0_executables/tests/caracterise2018/: CMakeLists.txt  Makefile  caracterise2018.cpp
0_executables/tests/cmu_sphinx/: CMakeLists.txt  main.cpp
0_executables/tests/determine-up/: CMakeLists.txt  Makefile  cmake_install.cmake  determine-up - Copie (2).cpp  determine-up - Copie.cpp
0_executables/tests/example/: CMakeLists.txt
0_executables/tests/library_cmake/: CMakeLists.txt
0_executables/tests/microphone/: CMakeLists.txt  microphone.cpp  (+1 more)
0_executables/worldhaptics_demo/: CMakeLists.txt  whc_demo.cpp
1_include/: ad5383.h  (+8 more)
(+866 files in other folders)
