cmake_minimum_required(VERSION 2.8)

###
# Executable Directory
###
add_subdirectory("determine-up")
add_subdirectory("demo_standard")
add_subdirectory("neutral")
add_subdirectory("caracterise2018")
add_subdirectory("sinefunction_generator")
add_subdirectory("apparent_motion_experiment")
add_subdirectory("tap_motion_experiment")
add_subdirectory("taphold_motion_experiment")
add_subdirectory("maximum_tap_motion_experiment")

#add_subdirectory("tests/read_values")
#add_subdirectory("tests/HaptiCommConfig")
#add_subdirectory("tests/sound_master")
#add_subdirectory("tests/prototype")
#add_subdirectory("readMp3")
#add_subdirectory("tests/config4cpp/demos/simple-encapsulation")
#add_subdirectory("tests/test_mergethreadread")
#add_subdirectory("tests/test_readkey")
#add_subdirectory("tests/test_thread")
#add_subdirectory("tests/test_vectors")
#add_subdirectory("worldhaptics_demo")
#add_subdirectory("caracterise2018")

